<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:id="@+id/buttonLogout"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/home"
        android:id="@+id/textViewHome"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smsBackup"
        android:id="@+id/buttonSMS"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactBackup"
        android:id="@+id/buttonContact"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:id="@+id/buttonAbout"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50sp" />

</LinearLayout>