<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical">

    <TextView
        android:id="@+id/textWelcome"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50sp"
        android:textSize="45dp" />

    <TextView
        android:id="@+id/textUsername"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userText"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50sp" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="100sp"
        android:layout_marginRight="100sp"
        android:layout_marginTop="10sp" />

    <TextView
        android:id="@+id/textPassword"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordText"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50sp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="100sp"
        android:layout_marginRight="100sp"
        android:layout_marginTop="10sp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_message"
        android:layout_marginTop="50sp" />


</LinearLayout>
